--- a/Vendors.html
+++ b/Vendors.html
@@ -75,7 +75,7 @@
               services, we are equipped to launch your business into a new era
               of success. Rely on our expertly curated product range to
               construct a resilient and forward-thinking infrastructure for your
-              enterprise.”
+              enterprise.
               <br />
               <br />
             </p>
