--- a/Products/Kaspersky.html
+++ b/Products/Kaspersky.html
@@ -695,11 +695,11 @@
                       <h2 style="color: lightgray; font-size: 5pxks">
                         Limpopo Branch
                       </h2>
-                      <p></p>
-                      <p></p>
-                      <p></p>
-                      <p></p>
-                    </div>
+                      <p>981 Hlaleka Sreet Lulekani</p>
+                      <p>Phalaborwa</p>
+                      <p>Limpopo</p>
+                      <p>1392</p>
+                  </div>
                   </div>
 
                   <div class="col-sm-4 footer-block last">
@@ -808,21 +808,7 @@
     </div>
     <!-- #main-wrapper -->
 
-    <section>
-      <div class="back-marquee">
-          <div class="marquee-content">
-              <img src="../img/karspersky product Icons/Asset_1.png" alt="Logo 1">
-              <img src="../img/logo-client-2.png" alt="Logo 1">
-              <img src="../img/logo-client-6.png" alt="Logo 4">
-              <img src="../img/logo-client-4.png" alt="Logo 3">
-              <img src="../img/logo-client-5.png" alt="Logo 4">
-              <img src="../img/logo-client-3.png" alt="Logo 2">
-              <!-- Add more logos as needed -->
-          </div>
-      </div>
-    </section>
-
-    <!-- Script -->
+      <!-- Script -->
     <script src="../js/jquery-2.1.4.min.js"></script>
     <script
       src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
