--- a/about.html
+++ b/about.html
@@ -132,11 +132,11 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <p>
+                <p class="introd-text">
                     Ikasi Solutions formerly known as Ikasi Solutions cc has changed registration with the companies registrar in 2019 to Ikasi Solutions(Pty)Ltd is an I.T. company founded in March 2001. Our core business include the following product offering: Consumer Solutions, Collaboration & Communications Solutions, Mobility Solutions, Security Solutions, Cloud Solutions, as well as Professional Services. We are an organization that believes in providing tailor made solutions for our clients in various industries. Ikasi Solutions promises excellent and personalised service achieved through dedication, determination, honesty, discipline and hard work.</p>
             </div>
             <div class="col-md-6">
-                <p> We employ a team of professionals with loads of industry experience to assist in ensuring that our work is of high quality standard. With over ten years’ experience in the industry, Ikasi Solutions has built a formidable relationship with various Government Departments and Private companies and Organisations. Good service is the backbone of our thriving company, and our strongly focused, ever-growing team is the very best. We believe that our customers are the testament to the quality of our people and of our products & systems. Amongst clients, we count some of South Africa's largest brand names.</p>
+                <p class="introd-text"> We employ a team of professionals with loads of industry experience to assist in ensuring that our work is of high quality standard. With over ten years’ experience in the industry, Ikasi Solutions has built a formidable relationship with various Government Departments and Private companies and Organisations. Good service is the backbone of our thriving company, and our strongly focused, ever-growing team is the very best. We believe that our customers are the testament to the quality of our people and of our products & systems. Amongst clients, we count some of South Africa's largest brand names.</p>
             </div>
         </div>
     </div>
