--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
                             </button>
-                            <a class="navbar-brand" href="index.html"><img id="pic-logo" style="height: 200px; width: 250px;" src="img/logo-bagl.png"
+                            <a class="navbar-brand" href="index.html"><img id="pic-logo" src="img/logo-bagl.png"
                                     alt="Ikasi-Solutions-Logo"></a>
                         </div>
 
@@ -128,8 +128,8 @@
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner" role="listbox">
                         <div class="item active">
-                            <img style="height: 830px ;width: 100%; filter: brightness(30%);" src="img/network.jpg" alt="Networking Banner"
-                                style="width: 100%;" class="Ikasi-network-banner">
+                            <img style="height: 720px ;width: 100%; filter: brightness(30%);" src="img/network.jpg" alt="Networking Banner"
+                            class="Ikasi-network-banner">
 
                             <div class="carousel-caption">
                                 <h1>Empowering your communication network with a safeguarded pathway to success<h1>
@@ -145,8 +145,13 @@
                 <!-- #Ikasi-carousel-->
 
                 <section id="x-services ptb-100 gray-bg" class="container">
-
-                    <section style="padding: 40px;" class="main-wel-text">
+                    <section class="section-title">
+                        <div style="padding-top: 30px;" class="container text-center">
+                            <h2>Home</h2>
+                            <span class="bordered-icon"><i class="fa fa-circle-thin"></i></span>
+                        </div>
+                    </section>
+                    <section  class="main-wel-text">
                         <div class="intro-text">
                             <p >
                                 Welcome to Ikasi Solutions, your trusted Managed Service Provider dedicated to elevating
@@ -189,7 +194,7 @@
                                             alt="Image"></a>
 
                                     <div class="caption">
-                                        <h3><a href="#">Communication</a></h3>
+                                        <h3><a href="services.html">Communication</a></h3>
 
                                         <p>Enhance your reach with our Communication Solutions, where we bridge gaps and
                                             build connections. Our communication solutions are tailored to ensure that
@@ -199,11 +204,11 @@
                             </div>
                             <div class="col-md-6">
                                 <div class="thumbnail clearfix">
-                                    <a href="#"><img class="img-responsive" src="img/cloud logo.jpg" alt="Image"
+                                    <a href="services.html"><img class="img-responsive" src="img/cloud logo.jpg" alt="Image"
                                             height="5%"></a>
 
                                     <div class="caption">
-                                        <h3><a href="#">Cloud</a></h3>
+                                        <h3><a href="services.html">Cloud</a></h3>
 
                                         <p>Elevate your business to new heights with our Cloud Solutions. We specialize
                                             in cloud computing services that are designed to streamline your operations,
@@ -216,10 +221,10 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="thumbnail clearfix">
-                                    <a href="#"><img class="img-responsive" src="img/security-logo.jpg" alt="Image"></a>
+                                    <a href="services.html"><img class="img-responsive" src="img/security-logo.jpg" alt="Image"></a>
 
                                     <div class="caption">
-                                        <h3><a href="#">Security</a></h3>
+                                        <h3><a href="services.html">Security</a></h3>
 
                                         <p>Secure your digital landscape with our Security Solutions. We provide
                                             comprehensive security services that protect your critical assets from the
@@ -229,11 +234,11 @@
                             </div>
                             <div class="col-md-6">
                                 <div class="thumbnail clearfix">
-                                    <a href="#"><img class="img-responsive" src="img/Networking logo.jpg"
+                                    <a href="services.html"><img class="img-responsive" src="img/Networking logo.jpg"
                                             alt="Image"></a>
 
                                     <div class="caption">
-                                        <h3><a href="#">Networking</a></h3>
+                                        <h3><a href="services.html">Networking</a></h3>
 
                                         <p>Connect with confidence with our Networking Solutions, where we offer
                                             cutting-edge solutions to keep your business ahead of the curve. Our team of
