--- a/services.html
+++ b/services.html
@@ -146,7 +146,7 @@
                   Fortifying your digital fortress with layers of impenetrable
                   security.<br />
                 </h1>
-                <p style="padding-bottom: 40px; padding-top: 20px;">
+                <p class="service-text">
                   At Ikasi Solutions, we understand that trust is the
                   cornerstone of any successful relationship, especially when it
                   comes to safeguarding your digital assets. Our team of
@@ -272,6 +272,36 @@
                 <div class="col-md-6 col-sm-12 x-accordion">
                   <h3>How we work</h3>
                   <div class="panel-group" id="accordionSixLeft">
+                     <!-- /.panel-default -->
+                     <div class="panel panel-default">
+                      <div class="panel-heading">
+                        <h4 class="panel-title">
+                          <a
+                            class=""
+                            data-toggle="collapse"
+                            data-parent="#accordionSixLeft"
+                            href="#collapseSixLeftThree"
+                            aria-expanded="true"
+                          >
+                            Quality and Innovation
+                          </a>
+                        </h4>
+                      </div>
+                      <div
+                        id="collapseSixLeftThree"
+                        class="panel-collapse collapse in"
+                        aria-expanded="true"
+                      >
+                        <div class="panel-body">
+                          We are committed to delivering high-quality solutions
+                          that not only meet but exceed our clients'
+                          expectations. We prioritize innovation and stay
+                          updated with the latest technologies and industry
+                          trends to provide cutting-edge solutions.
+                        </div>
+                      </div>
+                    </div>
+                    <!-- /.panel-default -->
                     <div class="panel panel-default">
                       <div class="panel-heading">
                         <h4 class="panel-title">
@@ -329,36 +359,6 @@
                         </div>
                       </div>
                     </div>
-                    <!-- /.panel-default -->
-                    <div class="panel panel-default">
-                      <div class="panel-heading">
-                        <h4 class="panel-title">
-                          <a
-                            class=""
-                            data-toggle="collapse"
-                            data-parent="#accordionSixLeft"
-                            href="#collapseSixLeftThree"
-                            aria-expanded="true"
-                          >
-                            Quality and Innovation
-                          </a>
-                        </h4>
-                      </div>
-                      <div
-                        id="collapseSixLeftThree"
-                        class="panel-collapse collapse in"
-                        aria-expanded="true"
-                      >
-                        <div class="panel-body">
-                          We are committed to delivering high-quality solutions
-                          that not only meet but exceed our clients'
-                          expectations. We prioritize innovation and stay
-                          updated with the latest technologies and industry
-                          trends to provide cutting-edge solutions.
-                        </div>
-                      </div>
-                    </div>
-                    <!-- /.panel-default -->
                   </div>
                   <!--end of /.panel-group-->
                 </div>
@@ -457,133 +457,95 @@
           <!-- .about-text-->
 
           <footer class="footer">
+
             <!-- Footer Widget Section -->
             <div class="footer-widget-section">
-              <div class="container text-center">
-                <div class="row">
-                  <h3 style="padding: 20px; color: lightgray">Branches</h3>
+                <div class="container text-center">
+                    <div class="row">
 
-                  <div class="address-row">
-                    <div class="address-column">
-                      <h2 style="color: lightgray; font-size: 5pxks">
-                        Brakpan Office
-                      </h2>
-                      <p>133b Springs Road</p>
-                      <p>Vulcania</p>
-                      <p>Brakpan</p>
-                      <p>1549</p>
-                    </div>
-                    <div class="address-column">
-                      <h2 style="color: lightgray; font-size: 5pxks">
-                        Kwa-Thema Office
-                      </h2>
-                      <p>3 MASEKELA STREET</p>
-                      <p>Kwa-Thema</p>
-                      <p>1575</p>
-                      <p></p>
-                    </div>
-                    <div class="address-column">
-                      <h2 style="color: lightgray; font-size: 5pxks">
-                        Free State Branch
-                      </h2>
-                      <p>40 Ernest street</p>
-                      <p>Riebeeckstad SP</p>
-                      <p>Riebeeckstad</p>
-                      <p>Free state, 4959</p>
-                    </div>
-                    <div class="address-column">
-                      <h2 style="color: lightgray; font-size: 5pxks">
-                        KwaZulu-Natal Branch
-                      </h2>
-                      <p>13 Braemar Ave</p>
-                      <p>La Lucia</p>
-                      <p>Umhlanga</p>
-                      <p>KwaZulu-Natal, 4051</p>
-                    </div>
-                    <div class="address-column">
-                      <h2 style="color: lightgray; font-size: 5pxks">
-                        Limpopo Branch
-                      </h2>
-                      <p>981 Hlaleka Sreet Lulekani</p>
-                      <p>Phalaborwa</p>
-                      <p>Limpopo</p>
-                      <p>1392</p>
-                    </div>
-                  </div>
+                        <h3 style="padding: 20px; color: lightgray;">Branches</h3>
 
-                  <div class="col-sm-4 footer-block last">
-                    <div class="footer-widget widget_text">
-                      <address>
-                        Contact US <br />
-                        TEL: (011) 743 3001 or (011) 736-3111 <br />
-                        ALT NO: 083 416 2645 <br />
-                        Send an Email on
-                        <a href="mailto:Info@ikasisolutions.co.za"
-                          >Info@ikasisolutions.co.za</a
-                        ><br />
-                      </address>
+                        <div class="address-row">
 
-                      <ul class="list-inline social-links">
-                        <li>
-                          <a
-                            rel="noopener"
-                            target="_blank"
-                            href="https://www.facebook.com/ikasisolutions/"
-                            ><i class="fa fa-facebook"></i
-                          ></a>
-                        </li>
-                        <li>
-                          <a
-                            rel="noopener"
-                            target="_blank"
-                            href="https://x.com/ikasi_solutions"
-                            ><i class="fa fa-twitter"></i
-                          ></a>
-                        </li>
-                        <li>
-                          <a
-                            rel="noopener"
-                            target="_blank"
-                            href="https://www.instagram.com/ikasisolutions"
-                            ><i class="fa fa-instagram"></i
-                          ></a>
-                        </li>
-                        <li>
-                          <a
-                            rel="noopener"
-                            target="_blank"
-                            href="https://www.linkedin.com/in/ikasi-solutions-347014190/"
-                            ><i class="fa fa-linkedin"></i
-                          ></a>
-                        </li>
-                      </ul>
+                            <div class="address-column">
+                                <h2 style="color: lightgray; font-size: 5pxks;">Brakpan Office</h2>
+                                <p>133b Springs Road</p>
+                                <p>Vulcania</p>
+                                <p>Brakpan</p>
+                                <p>1549</p>
+                            </div>
+                            <div class="address-column">
+                                <h2 style="color: lightgray; font-size: 5pxks;">Kwa-Thema Office</h2>
+                                <p>3 MASEKELA STREET</p>
+                                <p>Kwa-Thema</p>
+                                <p>1575</p>
+                                <p></p>
+                            </div>
+                            <div class="address-column">
+                                <h2 style="color: lightgray; font-size: 5pxks;">Free State Branch</h2>
+                                <p>40 Ernest street</p>
+                                <p>Riebeeckstad SP</p>
+                                <p>Riebeeckstad</p>
+                                <p>Free state, 4959</p>
+                            </div>
+                            <div class="address-column">
+                                <h2 style="color: lightgray; font-size: 5pxks;">KwaZulu-Natal Branch</h2>
+                                <p>13 Braemar Ave</p>
+                                <p>La Lucia</p>
+                                <p>Umhlanga</p>
+                                <p>KwaZulu-Natal, 4051</p>
+                            </div>
+                            <div class="address-column">
+                                <h2 style="color: lightgray; font-size: 5pxks">
+                                  Limpopo Branch
+                                </h2>
+                                <p>981 Hlaleka Sreet Lulekani</p>
+                                <p>Phalaborwa</p>
+                                <p>Limpopo</p>
+                                <p>1392</p>
+                            </div>
+                        </div>
+
+                        <div  class="col-sm-4 footer-block last">
+                            <div class="footer-widget widget_text">
+                                <address>
+                                    Contact US <br>
+                                    TEL: (011) 743 3001 or (011) 736-3111 <br>
+                                    ALT NO: 083 416 2645 <br>
+                                    Send an Email on <a href="mailto:Info@ikasisolutions.co.za">Info@ikasisolutions.co.za</a><br>
+                                </address>
+        
+                                <ul class="list-inline social-links">
+                                    <li><a rel="noopener" target="_blank" href="https://www.facebook.com/ikasisolutions/"><i class="fa fa-facebook"></i></a></li>
+                                    <li><a rel="noopener" target="_blank" href="https://x.com/ikasi_solutions"><i class="fa fa-twitter"></i></a></li>
+                                    <li><a rel="noopener" target="_blank" href="https://www.instagram.com/ikasisolutions"><i class="fa fa-instagram"></i></a></li>
+                                    <li><a rel="noopener" target="_blank" href="https://www.linkedin.com/in/ikasi-solutions-347014190/"><i class="fa fa-linkedin"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <!-- /.col-sm-4 -->
                     </div>
-                  </div>
-                  <!-- /.col-sm-4 -->
                 </div>
-              </div>
             </div>
             <!-- /.Footer Widget Section -->
 
             <div class="copyright-section">
-              <div class="container clearfix">
-                <span class="copytext"
-                  >&copy; Ikasi Solutions. All rights reserved. | Modified By:
-                  <a href="#">Crypto and Zukamime</a></span
-                >
+                <div class="container clearfix">
+                    <span class="copytext">&copy; Ikasi Solutions. All rights reserved. | Created & Modified By: <a
+                            href="#">Crypto and Zukamime</a></span>
 
-                <ul class="list-inline pull-right">
-                  <li><a href="index.html">Home</a></li>
-                  <li><a href="about.html">About</a></li>
-                  <li class="active"><a href="services.html">Services</a></li>
-                  <li><a href="Blog.html">News</a></li>
-                  <li><a href="contact.html">Contact</a></li>
-                </ul>
-              </div>
-              <!-- .container -->
+                    <ul class="list-inline pull-right">
+                        <li class="active"><a href="index.html">Home</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="services.html">Services</a></li>
+                        <li><a href="Blog.html">News</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                    </ul>
+                </div>
+                <!-- .container -->
             </div>
             <!-- .copyright-section -->
-          </footer>
+        </footer>
           <!-- .footer -->
         </div>
         <!-- .content-wrapper -->
