--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt=""></a>
+            <a class="navbar-brand" href="index.html"><img src="img/logo2-nobg.png" alt="Ikasi Solutions logo"></a>
         </div>
 
 
@@ -281,14 +281,19 @@
 <!-- #main-wrapper -->
 
 <section>
-    <div class="back-marquee" >
+    <div class="back-marquee" id="logo-marquee">
         <div class="marquee-content">
-            <img src="./img/karspersky product Icons/Asset_1.png" alt="Logo 1">
-            <img src="./img/logo-client-2.png" alt="Logo 1">
-            <img src="./img/logo-client-6.png" alt="Logo 4">
-            <img src="./img/logo-client-4.png" alt="Logo 3">
-            <img src="./img/logo-client-5.png" alt="Logo 4">
-            <img src="./img/logo-client-3.png" alt="Logo 2">
+            <img src="./img/IS-slogan-nobg.png" alt="">
+            <img src="./img/karspersky product Icons/Asset_1.png" alt="">
+            <img src="./img/logo-client-2.png" alt="">
+            <img src="./img/logo-client-6.png" alt="">
+            <img src="./img/logo-client-4.png" alt="">
+            <img src="./img/logo-client-5.png" alt="">
+            <img src="./img/logo-client-3.png" alt="">
+            <img src="./img/dell-tech-Logo.png" alt="">
+            <img src="./img/veeam-logo.png" alt="">
+            <img src="./img/hpe1-wite.png" alt="">
+            <img src="./img/Huawei-Logo1-white.png" alt="">
             <!-- Add more logos as needed -->
         </div>
     </div>
