--- a/services.html
+++ b/services.html
@@ -67,7 +67,7 @@
                   <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="index.html"
-                  ><img src="img/logo.png" alt=""
+                  ><img src="img/logo2-nobg.png" alt="Ikasi Solutions logo"
                 /></a>
               </div>
 
@@ -174,7 +174,7 @@
                 <div class="col-sm-6 col-md-3">
                   <div class="promo-block-wrapper clearfix">
                     <div class="promo-icon">
-                      <i class="fa fa-comments"></i>
+                      <img title="communication mini icon" src="./img/com-mini.jpg" class="mini-icon">
                     </div>
                     <div class="promo-content">
                       <h3>Communication</h3>
@@ -197,7 +197,7 @@
                 <div class="col-sm-6 col-md-3">
                   <div class="promo-block-wrapper clearfix">
                     <div class="promo-icon">
-                      <i class="fa fa-upload"></i>
+                      <img title="Cloud Min Icon" src="./img/cloud-mini.jpg" class="mini-icon">
                     </div>
                     <div class="promo-content">
                       <h3>Cloud</h3>
@@ -219,7 +219,7 @@
                 <div class="col-sm-6 col-md-3">
                   <div class="promo-block-wrapper clearfix">
                     <div class="promo-icon">
-                      <i class="fa fa-lock"></i>
+                      <img title="Security Mini icon" src="./img/sec-mini.jpg" class="mini-icon">
                     </div>
                     <div class="promo-content">
                       <h3>Security</h3>
@@ -241,20 +241,13 @@
                 <div class="col-sm-6 col-md-3">
                   <div class="promo-block-wrapper clearfix">
                     <div class="promo-icon">
-                      <i class="fa fa-wifi"></i>
+                      <img title="Networking Mini Icon" src="./img/net-mini.jpg" class="mini-icon">
                     </div>
                     <div class="promo-content">
                       <h3>Networking</h3>
 
                       <p>
-                        Secure your digital landscape with our Security
-                        Solutions. We provide comprehensive security services
-                        that protect your critical assets from the ever-growing
-                        threats of the cyber world. From proactive monitoring to
-                        advanced threat defense, our security strategies are
-                        tailored to safeguard your operations, ensuring peace of
-                        mind and resilience against attacks. Trust us to be the
-                        shield that guards your technological endeavors.
+                        At Ikasi Solutions, we specialize in providing comprehensive networking solutions that ensure your business stays connected and secure. Our expert team designs, implements, and manages robust network infrastructures tailored to your specific needs. Whether you're looking to upgrade your existing network, enhance your cybersecurity, or implement cutting-edge wireless solutions, we deliver reliable and scalable networking services that keep your operations running smoothly. Partner with us for seamless connectivity and peace of mind.
                       </p>
                     </div>
                   </div>
@@ -456,6 +449,84 @@
           </section>
           <!-- .about-text-->
 
+             <!--Begining Products Sertion-->
+             <section id="products">
+              <h2 class="prod-text">Products</h2>
+              <h2>Endpoint Protection</h2>
+              <div class="product-container">
+                  <div class="product">
+                      <img src="./img/karspersky product Icons/Asset_1.png" alt="Kaspersky Antivirus">
+                      <h3>Kaspersky Antivirus</h3>
+                      <p>Powerful protection against all types of cyber threats with real-time protection and advanced scanning.</p>
+                      <ul>
+                          <li>Real-time protection</li>
+                          <li>Advanced malware detection</li>
+                          <li>Privacy protection</li>
+                      </ul>
+                  </div>
+                  <div class="product">
+                      <img src="./img/logo-client-2.png" alt="Sophos Antivirus">
+                      <h3>SOPHOS Antivirus</h3>
+                      <p>Comprehensive security with advanced threat protection, ensuring data and privacy are safeguarded.</p>
+                      <ul>
+                          <li>Advanced threat protection</li>
+                          <li>Ransomware defense</li>
+                          <li>Web protection</li>
+                      </ul>
+                  </div>
+  
+                  <div class="product">
+                    <img src="./img/logo-client-4.png" alt="CheckPoint Antivirus">
+                    <h3>CheckPoint Antivirus</h3>
+                    <p>To offer simple and flexible security administration, Check Point’s entire endpoint security suite can be managed centrally using a single management console</p>
+                    <ul>
+                        <li>Data Security</li>
+                        <li>advanced threat prevention</li>
+                        <li>Network Security</li>
+                    </ul>
+                </div>
+                  <!-- Add more products as needed -->
+              </div>
+              <h2 class="prod-tile">Firewall</h2>
+              <div class="product-container">
+                  <div class="product">
+                      <img src="./img/logo-client-2.png" alt="Sophos Firewall">
+                      <h3>SOPHOS Firewall</h3>
+                      <p>Consolidate your network protection with our integrated and extensible platform to secure your hybrid networked world. </p>
+                      <ul>
+                          <li>Automatic response to active threats</li>
+                          <li>Powerful protection and performance</li>
+                          <li>Managed through a single console</li>
+                      </ul>
+                  </div>
+                </div>
+  
+                <h2 class="prod-tile">Switches</h2>
+              <div class="product-container">
+                  <div class="product">
+                      <img src="./img/logo-client-6.png" alt="Cisco Switches">
+                      <h3>CISCO</h3>
+                      <p>Anchor your networking strategy with Ultra-reliable performance and Scalable infrastructure.</p>
+                      <ul>
+                          <li>Industry-leading performance</li>
+                          <li>Energy efficiency</li>
+                          <li>Easy programming</li>                        
+                      </ul>
+                  </div>
+                  <div class="product">
+                    <img src="./img/Huawei-Logo1-white.png" alt="Huawei Switches">
+                    <h3>HUAWEI</h3>
+                    <p>For a wide variety of applications and network sizes, from cloud data centers to campus networks.</p>
+                    <ul>
+                        <li>Products & Solutions for Every Scenario</li>
+                        <li>Tailored for Every Industry</li>
+                        <li>Global Services Localized for You</li>
+                    </ul>
+                </div>
+                </div>
+          </section>
+          <!--end of products-->
+
           <footer class="footer">
 
             <!-- Footer Widget Section -->
@@ -577,19 +648,24 @@
     </div>
     <!-- #main-wrapper -->
 
-    <section>
-      <div class="back-marquee">
+ <!--   <section>
+      <div class="back-marquee" id="logo-marquee">
           <div class="marquee-content">
-              <img src="./img/karspersky product Icons/Asset_1.png" alt="Logo 1">
-              <img src="./img/logo-client-2.png" alt="Logo 1">
-              <img src="./img/logo-client-6.png" alt="Logo 4">
-              <img src="./img/logo-client-4.png" alt="Logo 3">
-              <img src="./img/logo-client-5.png" alt="Logo 4">
-              <img src="./img/logo-client-3.png" alt="Logo 2">
-              <!-- Add more logos as needed -->
+              <img src="./img/karspersky product Icons/Asset_1.png" alt="">
+              <img src="./img/logo-client-2.png" alt="">
+              <img src="./img/logo-client-6.png" alt="">
+              <img src="./img/logo-client-4.png" alt="">
+              <img src="./img/logo-client-5.png" alt="">
+              <img src="./img/logo-client-3.png" alt="">
+              <img src="./img/dell-tech-Logo.png" alt="">
+              <img src="./img/veeam-logo.png" alt="">
+              <img src="./img/hpe1-wite.png" alt="">
+              <img src="./img/Huawei-Logo1-white.png" alt="">
+              <img src="./img/IS-slogan-nobg.png" alt="">
+             
           </div>
       </div>
-  </section>
+  </section>-->
 
     <!-- Script -->
     <script src="js/jquery-2.1.4.min.js"></script>
