--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
                             </button>
-                            <a class="navbar-brand" href="index.html"><img id="pic-logo" src="img/logo-bagl.png"
+                            <a class="navbar-brand" href="index.html"><img id="pic-logo" src="img/logo2-nobg.png"
                                     alt="Ikasi-Solutions-Logo"></a>
                         </div>
 
@@ -277,7 +277,7 @@
                                 <div class="item">
                                     <blockquote>
                                         <ul>
-                                            <li><img src="./img/2.png" class=" img-responsive" alt="" /></li>
+                                            <li><img src="./img/2.png" class="img-responsive" alt="" /></li>
 
                                         </ul>
                                     </blockquote>
@@ -420,6 +420,7 @@
     <section>
         <div class="back-marquee" id="logo-marquee">
             <div class="marquee-content">
+                <img src="./img/IS-slogan-nobg.png" alt="">
                 <img src="./img/karspersky product Icons/Asset_1.png" alt="">
                 <img src="./img/logo-client-2.png" alt="">
                 <img src="./img/logo-client-6.png" alt="">
