--- a/services.html
+++ b/services.html
@@ -606,9 +606,9 @@
                             href="#">Crypto and Zukamime</a></span>
 
                     <ul class="list-inline pull-right">
-                        <li class="active"><a href="index.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About</a></li>
-                        <li><a href="services.html">Services</a></li>
+                        <li class="active"><a href="services.html">Services</a></li>
                         <li><a href="Blog.html">News</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
