--- a/blog.html
+++ b/blog.html
@@ -214,9 +214,9 @@
 
             <ul class="list-inline pull-right">
                 <li><a href="index.html">Home</a></li>
-                <li class="active"><a href="about.html">About</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="services.html">Services</a></li>
-                <li><a href="Blog.html">News</a></li>
+                <li class="active"><a href="Blog.html">News</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
